--- a/public/app/partials/Community/event-details.html
+++ b/public/app/partials/Community/event-details.html
@@ -5,7 +5,7 @@
             <li ng-class="">
                 <a href="#profile/{{userId}}" >Evezsite</a>
             </li>
-            <li ><a href="#myevents/{{userId}}" class="{{isActive[1]}}">Events</a>
+            <li ><a href="#myevents/{{currentUserId}}" class="{{isActive[1]}}">Events</a>
             </li>
             <li ng-class="{ active: isActive('/explore')}">
                 <!-- Template which needs to be shown on click -->
