--- a/public/app/partials/profile/details/change_password.html
+++ b/public/app/partials/profile/details/change_password.html
@@ -1,3 +1,38 @@
+<!-- Static navbar -->
+<nav class="navbar navbar-default" id="navContainer">
+    <div id="navbar1">
+        <ul class="nav navbar-nav">
+            <li>
+                <a href="#profile/{{userId}}" ng-class="{ active: isActive('/profile')}">Evezsite</a>
+            </li>
+            <li>
+                <a href="#profile/{{userId}}/personalinfo" class="{{isActive[1]}}">Manage Evezsite</a>
+            </li>
+            <li ng-class="{ active: isActive('/explore')}">
+                <!-- Template which needs to be shown on click -->
+                <script type="text/ng-template" id="explore">
+                    <div class="triangle"></div>
+                    <div class="ns-popover-tooltip">
+                        <ul>
+                            <li style="padding: 5px; text-align: center"><a  href="#evezplace">EvezPlace</a></li>
+                            <li style="padding: 5px; text-align: center"><a  href="#wopportunity">Wopportunity</a></li>
+                        </ul>
+                    </div>
+                </script>
+
+                <a ns-popover
+                   ns-popover-template="explore"
+                   ns-popover-trigger="click"
+                   ns-popover-theme="ns-popover-list-theme">
+                    Explore
+                </a>
+            </li>
+            <li ng-class="{ active: isActive('/search/advanced')}"><a href="#search/advanced" id="search">Search&nbsp;
+            <span class="fa fa-search" id="searchIcon"></span></a>
+            </li>
+        </ul>
+    </div>
+</nav>
 <div class="container" ng-controller="profileCtrl">
     <div class="row user-menu-container square">
         <div class="col-md-12 user-details">
