group activity details url link updated
Group activity details url link updated and changed the color of * in
mandatory fields in create store

--- a/public/app/partials/Community/group-details.html
+++ b/public/app/partials/Community/group-details.html
@@ -163,7 +163,7 @@
         </div>
         <div class="col-md-12 zero-padding-left-right reco-brand-section">
             <div class="col-md-4 col-md-offset-8 text-right" ng-if="activities.links.length > 0">
-                <span class="fa fa-link"></span><a href="{{activities.links[0].url_link}}"><b style="color: #4cb1ca;">
+                <span class="fa fa-link"></span><a href="http://{{activities.links[0].url_link}}"><b style="color: #4cb1ca;">
                 {{activities.links[0].url_link}}</b></a>
             </div>
         </div>
