--- a/public/app/partials/evezplace/create_store_step2.html
+++ b/public/app/partials/evezplace/create_store_step2.html
@@ -24,7 +24,7 @@
     <div class="row" style="margin-top: 10px; margin-bottom: 10px">
         <div class="form-group">
             <div class="col-md-offset-2 col-md-4">
-                <label for="storeType">What type of store would you like to select *</label>
+                <label for="storeType">What type of store would you like to select <b style="color:red;">*</b></label>
             </div>
             <div class="col-md-4">
                 <select class="form-control"  id="sub-visibilities-type" id="storeType"
@@ -108,7 +108,7 @@
         <div class="form-group">
             <div class="col-md-offset-2 col-md-4">
                 <label for="billingName">Give your billing Info (required even
-                    if you select a free store) *</label>
+                    if you select a free store) <b style="color:red;">*</b></label>
             </div>
             <div class="col-md-4">
                 <input type="text" placeholder="Name" class="form-control" id="billingName" name="billingName"
