--- a/public/app/partials/evezplace/create_store_step3.html
+++ b/public/app/partials/evezplace/create_store_step3.html
@@ -26,7 +26,7 @@
     <div class="row" style="margin-top: 10px; margin-bottom: 10px">
         <div class="form-group">
             <div class="col-md-offset-2 col-md-4">
-                <label for="storeTitle">Store title/Name plus byline *</label>
+                <label for="storeTitle">Store title/Name plus byline <b style="color:red;">*</b></label>
             </div>
             <div class="col-md-4">
                 <input type="text" placeholder="Store Title" class="form-control" id="storeTitle" name="storeTitle"
@@ -38,7 +38,7 @@
     <div class="row" style="margin-top: 15px; margin-bottom: 15px">
         <div class="form-group">
             <div class="col-md-offset-2 col-md-4">
-                <label for="collagePic1">Upload Collage Pictures - 3 pictures *</label>
+                <label for="collagePic1">Upload Collage Pictures - 3 pictures</label>
             </div>
             <div class="col-md-4">
                 <a ng-click="SelectLeftCollage()"
@@ -126,7 +126,7 @@
     <div class="row" style="margin-top: 15px; margin-bottom: 15px">
         <div class="form-group">
             <div class="col-md-offset-2 col-md-4">
-                <label for="storeProfilePic">Upload Profile - shop logo/picture *</label>
+                <label for="storeProfilePic">Upload Profile - shop logo/picture</label>
             </div>
             <div class="col-md-4">
                 <a ng-click="SelectProfileCollage()"
@@ -234,7 +234,7 @@
     <div class="row" style="margin-top: 10px; margin-bottom: 10px">
         <div class="form-group">
             <div class="col-md-offset-2 col-md-4">
-                <label for="storeType">Listing Information *</label>
+                <label for="storeType">Listing Information <b style="color:red;">*</b></label>
             </div>
             <div class="col-md-4">
                 <select  data-ng-model="selectedStoreListing" class="form-control" id="storeType"
