--- a/public/app/partials/evezplace/create_store_step4.html
+++ b/public/app/partials/evezplace/create_store_step4.html
@@ -24,7 +24,7 @@
     <div class="row" style="margin-top: 10px; margin-bottom: 10px">
         <div class="form-group">
             <div class="col-md-offset-2 col-md-4">
-                <label for="storeEmail">E-Mail *</label>
+                <label for="storeEmail">E-Mail <b style="color:red;">*</b></label>
             </div>
             <div class="col-md-4">
                 <input type="email" ng-pattern="/^[^\s@]+@[^\s@]+\.[^\s@]{2,}$/" placeholder="Email" class="form-control" id="storeEmail" name="name"
