--- a/public/app/partials/evezplace/create_classifieds_step2.html
+++ b/public/app/partials/evezplace/create_classifieds_step2.html
@@ -208,7 +208,7 @@
                         <label for="dealDescription">Contact Details</label>
                     </div>
                     <div class="col-md-4">
-                        <input type="text" placeholder="Phone Number" class="form-control" id="phoneNum" name="phoneNum"
+                        <input type="number" placeholder="Phone Number" class="form-control" id="phoneNum" name="phoneNum"
                                ng-model="addClassified.contactDetails.phoneNum" required>
                     </div>
                 </div>
