Text changes updated
Text changes updated. Evezplace changed to Marketplace, Classifieds to
Ads & campaigns, and wopportunity to jobs

--- a/public/app/partials/Community/createblog.html
+++ b/public/app/partials/Community/createblog.html
@@ -3,7 +3,7 @@
     <div id="navbar1">
         <ul class="nav navbar-nav">
             <li ng-class="">
-                <a href="#profile/{{userId}}" >Evezsite</a>
+                <a href="#profile/{{userId}}" >Mysite</a>
             </li>
             <li ><a href="#myblogs/{{userId}}" class="{{isActive[1]}}">Blogs</a>
             </li>
@@ -13,8 +13,8 @@
                     <div class="triangle"></div>
                     <div class="ns-popover-tooltip">
                         <ul>
-                            <li style="padding: 5px; text-align: center"><a  href="#evezplace">EvezPlace</a></li>
-                            <li style="padding: 5px; text-align: center"><a  href="#wopportunity">Wopportunity</a></li>
+                            <li style="padding: 5px; text-align: center"><a  href="#evezplace">MarketPlace</a></li>
+                            <li style="padding: 5px; text-align: center"><a  href="#wopportunity">Jobs</a></li>
                         </ul>
                     </div>
                 </script>
