--- a/public/app/partials/Community/events.html
+++ b/public/app/partials/Community/events.html
@@ -18,16 +18,14 @@
             </li>
             <li ng-class="{ active: isActive('/community')}"><a href="#community" >Build Community</a>
             </li>
-           
-            <li ng-class="{ active: isActive('/streamit')}"><a href="#streamit">Stream It</a></li>
             <li ng-class="{ active: isActive('/explore')}">
                 <!-- Template which needs to be shown on click -->
                 <script type="text/ng-template" id="explore">
                     <div class="triangle"></div>
                     <div class="ns-popover-tooltip">
                         <ul>
-                            <li style="padding: 5px; text-align: center"><a  href="#evezplace">EvezPlace</a></li>
-                            <li style="padding: 5px; text-align: center"><a  href="#wopportunity">Wopportunity</a></li>
+                            <li style="padding: 5px; text-align: center"><a  href="#evezplace">MarketPlace</a></li>
+                            <li style="padding: 5px; text-align: center"><a  href="#wopportunity">Jobs</a></li>
                         </ul>
                     </div>
                 </script>
