--- a/public/app/partials/evezplace/browse/classifieds/browse.html
+++ b/public/app/partials/evezplace/browse/classifieds/browse.html
@@ -16,7 +16,7 @@
                         <div class="input-group add-on">
                             <div class="icon-addon addon-md">
                                 <input type="text" class="form-control"
-                                       placeholder="Search Classifieds"
+                                       placeholder="Search Ads & Campaigns"
                                        name="search-store"
                                        ng-model="searchText"
                                        id="search-store">
