--- a/public/app/partials/evezplace/create_browse_partial.html
+++ b/public/app/partials/evezplace/create_browse_partial.html
@@ -10,18 +10,18 @@
         </div>
 
         <div class="col-md-3">
-             <a href="#classifieds/create/step1" id="btn-create-classifieds" class="btn btn-block">Create Your Classifieds <span class="fa fa-angle-right fa-2x pull-right"></span></a>
+             <a href="#classifieds/create/step1" id="btn-create-classifieds" class="btn btn-block">Create Ads & Campaigns <span class="fa fa-angle-right fa-2x pull-right"></span></a>
         </div>
         <div class="col-md-3">
-             <a href="#classifieds/browse" id="btn-browse-classifieds" class="btn btn-block">Browse Existing Classifieds <span class="fa fa-angle-right fa-2x pull-right"></span></a>
+             <a href="#classifieds/browse" id="btn-browse-classifieds" class="btn btn-block">Browse Ads & Campaigns <span class="fa fa-angle-right fa-2x pull-right"></span></a>
         </div>
     </div>
     <div class="row" id="store-button-section" ng-if="isClassified">
         <div class="col-md-6">
-             <a href="#classifieds/create/step1" id="btn-create-classifieds" class="btn btn-block">Create Your Classifieds <span class="fa fa-angle-right fa-2x pull-right"></span></a>
+             <a href="#classifieds/create/step1" id="btn-create-classifieds" class="btn btn-block">Create Ads & Campaigns <span class="fa fa-angle-right fa-2x pull-right"></span></a>
         </div>
         <div class="col-md-6">
-             <a href="#classifieds/browse" id="btn-browse-classifieds" class="btn btn-block">Browse Existing Classifieds <span class="fa fa-angle-right fa-2x pull-right"></span></a>
+             <a href="#classifieds/browse" id="btn-browse-classifieds" class="btn btn-block">Browse Ads & Campaigns <span class="fa fa-angle-right fa-2x pull-right"></span></a>
         </div>
     </div>
 </div>
