--- a/public/app/partials/evezplace/create_classifieds_step1.html
+++ b/public/app/partials/evezplace/create_classifieds_step1.html
@@ -53,7 +53,7 @@
                                value="3"
                                ng-model="addClassified.classified_for"
                                required>
-                        New Classifieds
+                        New Ads & Campaigns
                     </label>
                 </div>
             </div>
