--- a/public/app/partials/evezplace/create_store_step3.html
+++ b/public/app/partials/evezplace/create_store_step3.html
@@ -10,7 +10,7 @@
 </div>
 
 <ul class="breadcrumb create-store-breadcrumb">
-    <li><a href="#evezplace">Evezplace</a></li>
+    <li><a href="#evezplace">MarketPlace</a></li>
     <li><a href="#whatdoiget">Create Store Info</a></li>
     <li>Create Store Front</li>
 </ul>
