--- a/public/app/partials/evezplace/store_info_jumbotron.html
+++ b/public/app/partials/evezplace/store_info_jumbotron.html
@@ -6,7 +6,7 @@
         <div class="col-md-8 list">
             <h1 style="text-transform: uppercase">Unique Opportunity</h1>
 
-            <h1 style="text-transform: uppercase; font-weight: 900">Evezplace</h1>
+            <h1 style="text-transform: uppercase; font-weight: 900">MarketPlace</h1>
 
             <p>Marketplace for showcasing women centric products and services in 5 key categories</p>
             <ul style="margin-top: 20px; border-radius: 10px ; display:block">
@@ -48,7 +48,7 @@
         <div class="col-md-8">
             <h1 style="text-transform: uppercase">Unique Opportunity</h1>
 
-            <h1 style="text-transform: uppercase; font-weight: 900">Evezplace</h1>
+            <h1 style="text-transform: uppercase; font-weight: 900">Marketplace</h1>
 
             <p>If you are a woman in business, go ahead an open your store. If your business is focused on women as a consumer, contact us. We will help you open a store</p>
             <a href="#contactus" class="btn btn-primary btn-lg" style="margin-top: 20px; border-radius: 10px;">Contact Us <span class="fa fa-chevron-right"></span></a>
