--- a/public/app/partials/evezplace/typeofstores.html
+++ b/public/app/partials/evezplace/typeofstores.html
@@ -94,7 +94,7 @@
             </tab>
 
             <!--standard-->
-            <tab heading="Evezplace Standard Store">
+            <tab heading="MarketPlace Standard Store">
                 <div class="col-md-12">
                     <div class="col-md-4" style="padding-left:60px;">
                         <p><span class="fa fa-square"
@@ -171,7 +171,7 @@
             </tab>
 
             <!--customized-->
-            <tab heading="Evezplace Customised">
+            <tab heading="MarketPlace Customised">
                 <div class="col-md-12">
                     <div class="col-md-4" style="padding-left:60px;">
                         <p><span class="fa fa-square"
@@ -197,7 +197,7 @@
                     </div>
                     <div class="col-md-8">
                         <p><span class="fa fa-check"
-                             style="color: #e51385; margin-top: 5px; margin-bottom: 5px"></span> Unlimited Visibility like Paid standard, in addition customised priority on Evezown, Evezplace landing pages.</p>
+                             style="color: #e51385; margin-top: 5px; margin-bottom: 5px"></span> Unlimited Visibility like Paid standard, in addition customised priority on Evezown, MarketPlace landing pages.</p>
                     </div>
 
                     <div class="col-md-4" style="padding-left:60px;">
