--- a/public/app/partials/evezplace/whatdoiget.html
+++ b/public/app/partials/evezplace/whatdoiget.html
@@ -43,7 +43,7 @@
                 <div class="promo-mask">
                     <img src="img/promotion_back.png" alt=""/>
 
-                    <h2 class="promo-text">Promotional Classifieds</h2>
+                    <h2 class="promo-text">Promotional Ads & Campaigns</h2>
                 </div>
             </div>
             <div class="col-md-4">
