--- a/public/app/partials/home/home.html
+++ b/public/app/partials/home/home.html
@@ -24,7 +24,7 @@
                 <h1 style="font-size:22px;margin-bottom:10px;margin-top:10px;background-color:#FFFFFF" id="step2" data-target="#step2" data-toggle="tab" data-slide-to="1">MarketPlace</h1>
                 <p style="text-align: justify;font-size:15px;">
                     <img src="img/market_place.jpg" class="description-img" width="150" height="80" style="border: 2px solid #FFFFFF;"/>
-                    Shopping is an art for discerning! If you have an eye for it, you will love Evezplace!
+                    Shopping is an art for discerning! If you have an eye for it, you will love MarketPlace!
                         This is a place for all things exclusive,  unique, you can always find something that  reflects your personal touch and taste.
                          If you know what want, search, filter or just browse through stores at leisure, explore, experience and then choose.</p>
                 </div>
