--- a/public/app/views/admin/evezplace/trending_items_partial.html
+++ b/public/app/views/admin/evezplace/trending_items_partial.html
@@ -4,7 +4,7 @@
             <select class="form-control"
                     ng-model="selectedSectionId"
                     style="font-weight: 700"
-                    default-option="Choose Evezplace Section"
+                    default-option="Choose MarketPlace Section"
                     ng-change="chooseSectionTrendingItems(selectedSectionId)"
                     ng-options="section.id as section.name for section in sections"
                     required>
