--- a/public/app/views/store/productline.html
+++ b/public/app/views/store/productline.html
@@ -5,7 +5,7 @@
     <div class="col-sm-12" style="margin: 10px 0px">
         <ul class="breadcrumb" style="background: transparent; padding-left: 0px">
             <li><a href="#home">Home</a> <span class="divider"></span></li>
-            <li><a href="#evezplace">Evezplace</a> <span class="divider"></span></li>
+            <li><a href="#evezplace">MarketPlace</a> <span class="divider"></span></li>
             <li><a href="#store/browse">Browse Stores</a></li>
             <li class="active"><a href="#store/{{storefront.id}}">{{storefront.title}}</a></li>
         </ul>
