--- a/public/app/partials/Community/advertise.html
+++ b/public/app/partials/Community/advertise.html
@@ -3,7 +3,7 @@
     <div id="navbar1">
         <ul class="nav navbar-nav">
             <li ng-class="">
-                <a href="#profile/{{userId}}">Evezsite</a>
+                <a href="#profile/{{userId}}">Mysite</a>
             </li>
             <li><a class="active" href="#advertise">Advertise</a></li>
             <li ng-class="{ active: isActive('/explore')}">
@@ -12,8 +12,8 @@
                     <div class="triangle"></div>
                     <div class="ns-popover-tooltip">
                         <ul>
-                            <li style="padding: 5px; text-align: center"><a  href="#evezplace">EvezPlace</a></li>
-                            <li style="padding: 5px; text-align: center"><a  href="#wopportunity">Wopportunity</a></li>
+                            <li style="padding: 5px; text-align: center"><a  href="#evezplace">MarketPlace</a></li>
+                            <li style="padding: 5px; text-align: center"><a  href="#wopportunity">Jobs</a></li>
                         </ul>
                     </div>
                 </script>
