--- a/public/app/partials/evezplace/manage/store/storecrm.html
+++ b/public/app/partials/evezplace/manage/store/storecrm.html
@@ -1,5 +1,5 @@
 <ul class="breadcrumb create-store-breadcrumb" style="background: transparent">
-    <li><a href="#evezplace">Evezplace</a></li>
+    <li><a href="#evezplace">MarketPlace</a></li>
     <li>Manage Store</li>
 </ul>
 
