--- a/public/app/partials/profile/details/change_password.html
+++ b/public/app/partials/profile/details/change_password.html
@@ -3,10 +3,10 @@
     <div id="navbar1">
         <ul class="nav navbar-nav">
             <li>
-                <a href="#profile/{{userId}}" ng-class="{ active: isActive('/profile')}">Evezsite</a>
+                <a href="#profile/{{userId}}" ng-class="{ active: isActive('/profile')}">Mysite</a>
             </li>
             <li>
-                <a href="#profile/{{userId}}/personalinfo" class="{{isActive[1]}}">Manage Evezsite</a>
+                <a href="#profile/{{userId}}/personalinfo" class="{{isActive[1]}}">Manage Mysite</a>
             </li>
             <li ng-class="{ active: isActive('/explore')}">
                 <!-- Template which needs to be shown on click -->
@@ -14,8 +14,8 @@
                     <div class="triangle"></div>
                     <div class="ns-popover-tooltip">
                         <ul>
-                            <li style="padding: 5px; text-align: center"><a  href="#evezplace">EvezPlace</a></li>
-                            <li style="padding: 5px; text-align: center"><a  href="#wopportunity">Wopportunity</a></li>
+                            <li style="padding: 5px; text-align: center"><a  href="#evezplace">MarketPlace</a></li>
+                            <li style="padding: 5px; text-align: center"><a  href="#wopportunity">Jobs</a></li>
                         </ul>
                     </div>
                 </script>
