--- a/public/app/views/manage/store/manage_rfq.html
+++ b/public/app/views/manage/store/manage_rfq.html
@@ -1,5 +1,5 @@
 <ul class="breadcrumb create-store-breadcrumb" style="background: transparent">
-    <li><a href="#evezplace">Evezplace</a></li>
+    <li><a href="#evezplace">MarketPlace</a></li>
     <li>Manage Store</li>
 </ul>
 
