Added jobs image in the home page
Added jobs image in the home page

--- a/public/app/partials/home/home.html
+++ b/public/app/partials/home/home.html
@@ -33,7 +33,7 @@
                 <a href="#wopportunity" style="text-decoration:none;"><h1 style="font-size:22px;margin-bottom:10px;margin-top:10px;background-color:#FFFFFF" id="step3" data-target="#step3" data-toggle="tab" data-slide-to="2">Jobs</h1>
                 <p style="text-align: justify;font-size:15px;"></a>
                 <!-- <a href="#streamit" style="text-decoration:none;">Evezown</a> -->
-                    <img src="img/mysite.jpg" class="description-img" width="150" height="90" style="border: 2px solid #FFFFFF;"/>
+                    <img src="img/jobs.jpg" class="description-img" width="150" height="90" style="border: 2px solid #FFFFFF;"/>
                     This is resourcing platform. If you are in business, you can use it for hiring talent. As a working professional you can use this platform to find an opportunity of your choice. Customized categorization helps you identify suitable opportunity.</p>
                 </div>
 
