validation added for collage images - create store
added validations to add collage images while creating stores

--- a/public/app/partials/evezplace/create_store_step3.html
+++ b/public/app/partials/evezplace/create_store_step3.html
@@ -38,7 +38,7 @@
     <div class="row" style="margin-top: 15px; margin-bottom: 15px">
         <div class="form-group">
             <div class="col-md-offset-2 col-md-4">
-                <label for="collagePic1">Upload Collage Pictures - 3 pictures</label>
+                <label for="collagePic1">Upload Collage Pictures - 3 pictures <b style="color:red;">*</b></label>
             </div>
             <div class="col-md-4">
                 <a ng-click="SelectLeftCollage()"
@@ -126,7 +126,7 @@
     <div class="row" style="margin-top: 15px; margin-bottom: 15px">
         <div class="form-group">
             <div class="col-md-offset-2 col-md-4">
-                <label for="storeProfilePic">Upload Profile - shop logo/picture</label>
+                <label for="storeProfilePic">Upload Profile - shop logo/picture <b style="color:red;">*</b></label>
             </div>
             <div class="col-md-4">
                 <a ng-click="SelectProfileCollage()"
