--- a/public/app/partials/articles.html
+++ b/public/app/partials/articles.html
@@ -2,11 +2,7 @@
     <h4 class="transparent-ribbon text-center" style="color: #e51385;">Articles</h4>
     <div class="interviews-section" ng-repeat="article in articles">
         <p style="text-align:justify;font-size:12px;">
-            <b>{{article.title}}</b> - {{article.description}}<br>
-            <span style="color: #e50880">
-                <a href="{{article.link}}" target="blank">
-                <button type="button" class="Readmore">Read more</button></a>
-            </span>
+            <a href="{{article.link}}" target="blank" style="text-decoration:none;"><b>{{article.title | strLimit:35}}</b></a> - {{article.description | strLimit:120}}<br>
         </p>    
     </div>
       
